@@ -1,7 +1,8 @@
 2.87 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Add new processor for handling current io status through the message queue interface.
+- Bump geotool api and geotool db api to bring in new io status functionality.
 
 
 2.86 (2018-11-18)
